RavenDB-21563 Fix z-index

--- a/src/Raven.Studio/wwwroot/Content/css/basic-layout.less
+++ b/src/Raven.Studio/wwwroot/Content/css/basic-layout.less
@@ -454,6 +454,11 @@
     align-items: center;
     z-index: @zindex-navbar-fixed;
 
+    @supports (backdrop-filter: blur(24px)) {
+        background-color: transparent;
+        backdrop-filter: blur(24px);
+    }
+
     @media (min-width:@screen-md) {
         height: @navbar-height;
     }
